--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section>
       <h2>About Me</h2>
       <p>
-        I'm a passionate junior software developer with nearly 2 years of experience. I bring a strong mathematical foundation and hands-on experience with C#, SQL Server, Power BI, and front-end tools like React.js. I enjoy solving real-world problems and building systems that support business objectives.
+        I'm a passionate junior software developer with nearly 2 years of hands-on experience in IT support and software development, along with insights into data mining and analysis. I bring a strong mathematical foundation and hands-on experience with C#, SQL Server, Power BI, and front-end tools like React.js. I enjoy solving real-world problems and building systems that support business objectives.
       </p>
     </section>
 
